--- a/app/templates/main/detalis.html
+++ b/app/templates/main/detalis.html
@@ -13,7 +13,7 @@
   <h1 class="nav-title">Zaprar</h1>
 
   <ul class="nav-list">
-      <li><a href="http://127.0.0.1:5000/">Home</a></li>
+      <li><a href="{{ url_for('main.main_site') }}">Home</a></li>
       <li><a href="">Movie List</a></li>
       <li><a href="" class="active">Detalis</a></li>
       </ul>
